Added if/else statement to count clicks

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,6 +15,7 @@
     <div class="mouth">
         <div id="teeth">
             <img src="../assets/teethVanillaJS.png">
+              <div id="cavity"></div>
         </div>
     </div>
 
