--- a/demo/index.html
+++ b/demo/index.html
@@ -15,12 +15,16 @@
     <div class="mouth">
         <div id="teeth">
             <img src="../assets/teethVanillaJS.png">
-              <div id="cavity"></div>
+            <div id="cavity"></div>
         </div>
     </div>
 
-    <button id="coffeeBtn"> coffee! </button>
-    <button id="teethCleaning"> tooth brush</button>
+    <button id="coffeeBtn">
+      <i class="fa fa-coffee" aria-hidden="true"></i>
+    </button>
+    <button id="teethCleaning">
+      <i class="fa fa-magic" aria-hidden="true"></i>
+    </button>
 
     <h3 class="PSA"> PSA: do not brush teeth within 30 minutes of consuming acidic food or drink as it can result in depletion of enamel. </h1>
 <script type="text/javascript" src="app.js"></script>
