Update index for 06/06 crash course

--- a/practice/index.html
+++ b/practice/index.html
@@ -32,8 +32,8 @@
       <i class="fa fa-magic" aria-hidden="true"></i>
     </button>
 
-<!--VERY IMPORTANT: link your script. notice that it goes BEFORE the closing body tag-->
-<script type="text/javascript" src="app.js"></script>
+<!--VERY IMPORTANT: link your script. It goes here, before the end of the /body tag-->
+
 </body>
 
 </html>
