--- a/practice/index.html
+++ b/practice/index.html
@@ -33,7 +33,9 @@
     </button>
 
 <!--VERY IMPORTANT: link your script. It goes here, before the end of the /body tag-->
+  <script type="text/javascript" src="./app.js">
 
+  </script>
 </body>
 
 </html>
